# zettel

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile  roadmap.md
.zettel/: config.toml
crates/zettel-cli/: Cargo.toml
crates/zettel-cli/src/: cli.rs  context.rs  main.rs  stdin.rs
crates/zettel-cli/src/commands/: id.rs  init.rs  list.rs  mod.rs  note.rs  search.rs  template.rs
crates/zettel-cli/src/services/: editor.rs  mod.rs  vault.rs
crates/zettel-core/: Cargo.toml
crates/zettel-core/examples/: playground.rs
crates/zettel-core/src/: config.rs  id.rs  lib.rs  lib.rs.bak  search.rs  template.rs
scripts/: build.ps1  install.ps1  install.sh
src/: main.rs
