# Cargo.toml (workspace root)
[workspace]
members = [
    "crates/zettel-core",
    "crates/zettel-cli", 
    "crates/zettel-lsp",
    "crates/zettel-web",
]
exclude = []

[workspace.package]
version = "0.1.0"
authors = ["Raúl E. Taveras <raul@raultaveras.online>"]
license = "MIT"
repository = "https://github.com/rauletaveras/zettel"
# documentation = "https://docs.rs/zettel-core"
keywords = ["zettelkasten", "notes", "cli", "knowledge-management"]
categories = ["command-line-utilities", "text-processing"]
edition = "2025"
rust-version = "1.70"

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.0"
tempfile = "3.0"
indexmap = "2.0"
dashmap = "5.0"
rayon = "1.0"
fuzzy-matcher = "0.3"
tantivy = "0.21"
notify = "6.0"
crossbeam-channel = "0.5"

# CLI-specific
atty = "0.2"
console = "0.15"
indicatif = "0.17"

# LSP-specific
tower-lsp = "0.20"
lsp-types = "0.94"

# Optional features
git2 = { version = "0.18", optional = true }
syntect = { version = "5.0", optional = true }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
