[package]
name = "zettel-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zettel"
path = "src/main.rs"

[dependencies]
zettel-core = { path = "../zettel-core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
is-terminal = "0.4"
