[package]
name = "zettel-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "cli app for Luhmann-style Zettelkasten management"

[[bin]]
name = "zettel"
path = "src/main.rs"

[dependencies]
zettel-core = { path = "../zettel-core", version = "0.2" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
is-terminal = "0.4"
