[package]
name = "zettel-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for Luhmann-style Zettelkasten management"

# Explicitly define the library target
[lib]
name = "zettel_core"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
toml = "0.8"
dirs = "5.0"

[features]
default = []
git = []
search = []
templates = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
